# django_rest_auth_embedded

./: INSTUCTION.md  MANIFEST.in  README.md  boot_django.py  djangoshell.py  makemigrations.py  migrate.py  pyproject.toml  runserver.py  setup.cfg  test.py  test_after_building_commit.py  test_after_building_local.py  test_after_packaging.py  test_after_packaging_with_tox.py  test_before_packaging.py  tox.ini
.github/workflows/: django.test_after_packaging.yml  django.test_after_packaging_with_tox.yml  django.test_before_packaging.yml
django_project_environment/: manage.py
django_project_environment/django_project_environment/: asgi.py  settings.py  urls.py  wsgi.py
django_rest_auth_embedded/: apps.py  settings.py  swagger.json  urls.py
django_rest_auth_embedded/serializers/: login.py  registration.py
django_rest_auth_embedded/static/django_rest_auth_embedded/: swagger.json
django_rest_auth_embedded/tests/: __init__.py
django_rest_auth_embedded/tests/integration/: __init__.py  auth_info.py  integration.py  login.py  logout.py  registration.py
django_rest_auth_embedded/tests/urls/: __init__.py  auth_info.py  base.py  login.py  logout.py  registration.py
django_rest_auth_embedded/tests/views/: __init__.py  (+5 more)
django_rest_auth_embedded/utils/: __init__.py  abstract_class_variables.py  get_base_app_name.py  get_base_url.py  get_namespace.py  validate_argument.py
django_rest_auth_embedded/views/: __init__.py  auth_info.py  base.py  login.py  logout.py  registration.py  swagger_expected.py
project_sample/backend_django/: .env.sample  requirements.txt
(+15 files in other folders)
