[metadata]
name = django_rest_auth_embedded
version = 0.1
description = Packaged application to work with django embedded authentication.
long_description = file: README.md
url = https://github.com/Volkova-Natalia/django_rest_auth_embedded
author = Volkova Natalia
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1.6
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
python_requires = >=3.8
install_requires =
    Django>=3.1.6
    djangorestframework>=3.12.2
test_suite = test.get_suite
